--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         
         <br></br>
         {% if site.github.is_user_page %}
-        &#09<p class="view"><a href="{{ site.github.owner_url }}">Resume</a> | <a href="{{ site.github.owner_url }}">GitHub</a></p>
+        &#09;<p class="view"><a href="{{ site.github.owner_url }}">Resume</a> | <a href="{{ site.github.owner_url }}">GitHub</a></p>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
