--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">&emsp;&emsp;&emsp;&emsp;&emsp;Resume</a> | <a href="{{ site.github.owner_url }}">GitHub</a></p>
         {% endif %}
 
-        <p style="float:right;">{{ site.description | default: site.github.project_tagline }}</p>
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
